# oopelab24dinamic

./: CMakeLists.txt  cheltuiala.c  cheltuiala.h  main.c  main.cpp  repo.c  repo.h  service.c  service.h  teste.c  teste.h
